<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".dashboard.ui.settings.SettingsFragment">

    <!-- Action Bar -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/terms_and_conditions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_icon_image"
            android:fontFamily="@string/activity_title_header_font_family"
            android:text="@string/title_settings"
            android:textColor="@color/black" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout">


        <TextView
            android:id="@+id/faq_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/faq"
            style="@style/SettingsTextStyle"
            />

        <TextView
            android:id="@+id/privacy_policy_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/privacy_policy"
            style="@style/SettingsTextStyle"
            />

        <TextView
            android:id="@+id/return_policy_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/return_policy"
            style="@style/SettingsTextStyle"
            />

        <TextView
            android:id="@+id/logout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            style="@style/SettingsTextStyle"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>