<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".cart.MyCartActivity">

    <!-- Action Bar -->
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/activity_back_icon_black"
            android:onClick="onBackButtonClick"
            android:src="@drawable/ic_outline_backspace_black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/terms_and_conditions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/app_icon_image"
            android:fontFamily="@string/activity_title_header_font_family"
            android:text="@string/my_bag"
            android:textColor="@color/black" />


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_cart_rv"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/place_order_root_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <RelativeLayout
        android:id="@+id/place_order_root_layout"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:padding="@dimen/space_8dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/button2"
            android:gravity="start|center_vertical"
            android:orientation="vertical">

            <TextView
                        android:id="@+id/cart_total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/AppTextHighlightStyle"
                android:textSize="20sp"
                android:text=""/>

        </LinearLayout>

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClickPlaceOrder"
            android:backgroundTint="@color/white"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:text="@string/place_order" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>