<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dashboard.ui.home.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".dashboard.ui.home.HomeFragment" >

        <!-- Action Bar -->

        <ProgressBar
            android:id="@+id/home_all_article_loading_pb"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/all_article_rv"
            app:layout_constraintEnd_toEndOf="@+id/all_article_rv"
            app:layout_constraintStart_toStartOf="@+id/all_article_rv"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            android:indeterminate="true" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/all_article_rv"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:layout_constraintVertical_bias="1.0" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/home_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/menu_icon_black"
                android:src="@drawable/ic_menu_black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="85dp"
                android:layout_height="36dp"
                android:layout_centerInParent="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/app_icon_image"
                android:src="@drawable/pro_bro_icon_focused" />
            <FrameLayout
                android:id="@+id/cart_layout"
                style="?attr/actionButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clipToPadding="false"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="16dp"
                android:focusable="true">

                <ImageButton
                    android:id="@+id/imageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@color/white"
                    android:contentDescription="@string/action_cart"
                    android:src="@drawable/ic_outline_shopping_bag_black" />


                <TextView
                    android:id="@+id/cart_badge"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="right|end|bottom"
                    android:layout_marginEnd="-5dp"
                    android:layout_marginTop="3dp"
                    android:background="@drawable/batch_drawable"
                    android:gravity="center|top"
                    android:padding="1dp"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"/>

            </FrameLayout>

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navi_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start|top"
        android:background="#FFFFFF"
        android:fitsSystemWindows="false"
        android:layout_marginTop="?attr/actionBarSize"
        app:headerLayout="@layout/nav_header_main"
        app:itemTextColor="@color/light_black"
        app:theme="@style/NavigationDrawerStyle"
        app:menu="@menu/nav_main_menu">

    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
